# Oreilly-WebAssembly-Shortcuts

./: LICENSE  README.md
01-Converting_Modules/: add.rs  add.wasm  readme.md
02-Exploring_Modules/: readme.md
03-Rust_Modules/: readme.md
04-Deno_WebAssembly/: main-server.ts  readme.md
05-Browser/: add.wasm  index.html  readme.md
06-Browser/: index.html  logadd.wat  readme.md
07-C_Modules/: fib.c  index.html  readme.md
08-AssemblyScript_Modules/: readme.md
09-Memory/: index.html  readme.md
10-Strings/: index.html  readme.md  strings.wat
11-Rust_From_JavaScript/: readme.md
11-Rust_From_JavaScript/rust-from-js/: Cargo.toml  index.js
12-JavaScript_From_Rust/: readme.md
12-JavaScript_From_Rust/js-from-rust/: Cargo.toml  index.js  package.json
13-Deno_and_Rust/: readme.md
13-Deno_and_Rust/deno_and_rust/: Cargo.toml  hr.js  test.ts
14-Rust_DOM/: readme.md
14-Rust_DOM/dom_from_rust/: Cargo.toml  index.html  index.js
15-Fetch/: readme.md
15-Fetch/fetch_from_browser/: Cargo.toml  index.html  index.js  package.json
15-Fetch/fetch_from_deno/: Cargo.toml  test.ts
15-Fetch/fetch_from_deno/src/: lib.rs
16-Files_CPP/: copy.cpp  readme.md
17-Wasi/: copy.cpp  readme.md
18-Wasi/: readme.md
19-Wasi/: demo.wat  readme.md
20-Wasm-Tools/: math.wat  readme.md
21-Why-Wasm-Components/: readme.md
22-Wasm-Components-Basic/: readme.md
22-Wasm-Components-Basic/add/: add.wat
23-Wasm-Components-Rust/: readme.md
24-Wasm-Components-JS/: readme.md
25-Wasm-Components-Python/: readme.md
29-Python-in-Browser/: readme.md
(+11 files in other folders)
