[package]
name = "fetch_from_deno"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.91"
js-sys = "0.3.68"
wasm-bindgen-futures = "0.4.41"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'Response',
  'Window',
]

